objects/privateAppEx__BannerImage__c.object
<CustomObject>
    <description>Images that are shown in rotation on a banner in the store.</description>
    <fields>
        <fullName>privateAppEx__Banner__c</fullName>
        <description>The banner of which this image is a part.</description>
        <inlineHelpText>The banner of which this image is a part.</inlineHelpText>
        <label>Banner</label>
        <referenceTo>privateAppEx__Banner__c</referenceTo>
        <relationshipLabel>Banner Images</relationshipLabel>
        <relationshipName>BannerImages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>privateAppEx__ImageAttachmentId__c</fullName>
        <description>The id of the attachment that has the image.</description>
        <inlineHelpText>The id of the attachment that has the image.</inlineHelpText>
        <label>Image Attachment Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Link__c</fullName>
        <description>The URL the user is directed to after clicking on the banner image.</description>
        <inlineHelpText>The URL the user is directed to after clicking on the banner image.</inlineHelpText>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Order__c</fullName>
        <description>The order in which this image should show up in rotation on the banner.</description>
        <inlineHelpText>The order in which this image should show up in rotation on the banner.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Target__c</fullName>
        <description>The window to be used for the redirection link when the user clicks on the banner.</description>
        <inlineHelpText>The window to be used for the redirection link when the user clicks on the banner.</inlineHelpText>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Banner Image</label>
    <nameField>
        <label>Banner Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banner Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>